--- a/Projectandroid/app/src/main/res/layout/activity_quiz.xml
+++ b/Projectandroid/app/src/main/res/layout/activity_quiz.xml
@@ -17,7 +17,7 @@
         android:textAlignment="center"
         android:layout_marginTop="32dp"
         android:padding="16dp"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/holo_blue_dark"
         android:textColor="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        app:strokeColor="@android:color/darker_gray"
+        app:strokeColor="@android:color/holo_blue_dark"
         app:strokeWidth="2dp" />
 
     <com.google.android.material.button.MaterialButton
@@ -55,7 +55,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        app:strokeColor="@android:color/darker_gray"
+        app:strokeColor="@android:color/holo_blue_dark"
         app:strokeWidth="2dp" />
 
     <com.google.android.material.button.MaterialButton
@@ -72,7 +72,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        app:strokeColor="@android:color/darker_gray"
+        app:strokeColor="@android:color/holo_blue_dark"
         app:strokeWidth="2dp" />
 
     <com.google.android.material.button.MaterialButton
@@ -89,7 +89,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        app:strokeColor="@android:color/darker_gray"
+        app:strokeColor="@android:color/holo_blue_dark"
         app:strokeWidth="2dp" />
 
     <!-- TextView pour afficher le score -->
@@ -99,13 +99,14 @@
         android:layout_height="wrap_content"
         android:text="Score: 0"
         android:textSize="18sp"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/black"
         android:background="@android:color/white"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/answerButton4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp" />
+
     <!-- Bouton Retour -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonReturn"
