--- a/Projectandroid/app/src/main/res/values/style.xml
+++ b/Projectandroid/app/src/main/res/values/style.xml
@@ -8,6 +8,12 @@
         <item name="android:layout_marginBottom">16dp</item>
         <item name="android:layout_columnWeight">1</item>
         <item name="android:padding">16dp</item>
+
+    </style>
+    <style name="CustomRadioButtonStyle">
+        <item name="android:textColor">@color/primary_color</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">8dp</item>
     </style>
 
 </resources>
